# mikros

./: .gitignore  2026-04-14-agora-creations-vision-v3.md  2026-04-14-agora-creations-vision.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  deploy.sh  install.sh  megalos.py  mikros.py  pyproject.toml  stub-deploy.sh
.claude/: settings.json
benchmarks/: bench_hot_path.py  bench_list_workflows.py  bench_mcp_client_cold_start.py  bench_smoke.py  bench_subworkflow.py  conftest.py  pytest.ini
ci/: mcp_smoke.py  no_raw_session_id_in_logs.sh
docs/: AUTHORING.md  PERFORMANCE.md  VISUALIZATION.md  branch-protection.md  deploying-a-domain-server.md  rate-limits.md
mcp_stub/: __init__.py  main.py  tools.py
megalos_panel/: __init__.py  config.py  errors.py  panel.py  record.py  retry.py  types.py
megalos_server/: MCP.md  README.md  SCHEMA.md  __init__.py  _demo4_dead.py  db.py  diagram.py  dryrun.py  errors.py  identity.py  identity_ctx.py  mcp_client.py  mcp_executor.py  mcp_registry.py  middleware.py  ratelimit.py  schema.py  session_canon.py  state.py  tools.py  validate.py
scripts/: smoke_endpoint.py
server/: README.md  SCHEMA.md  config.py  main.py  schema.py  state.py  tools.py  validate.py
simplicity-guard/: README.md  SKILL.md
tests/: conftest.py  run_all.sh  test_blog_workflow.py  test_branching.py  test_capability_token_model.py  test_caveman_phase.sh  test_claude_md.sh  test_commands.sh  test_db_schema.py  test_decision_workflow.py  test_delete_session_invariant.py  test_demo_m005.py  test_diagram.py  test_diagram_cli.py  test_docs.py  test_dryrun.py  (+67 more)
(+123 files in other folders)
