[project]
name = "megalos-server"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.3",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
panel = [
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-jsonschema>=4.23,<5",
    "types-PyYAML>=6.0,<7",
]
benchmark = [
    "pytest-benchmark>=4.0,<6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["megalos_server*", "megalos_panel*", "mcp_stub*"]

[tool.setuptools.package-data]
megalos_server = ["workflows/*.yaml", "*.md"]

# Coverage threshold pinned at baseline-minus-2%. Baseline measured by
# `uv run pytest --cov --cov-report=term` during M002/S01/T04 → 85% TOTAL;
# floor(85 - 2) = 83. Revisit when refactors change the honest baseline.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov --cov-fail-under=83 -m 'not live'"
markers = [
    "live: requires live provider API keys and network; skipped in standard CI gate",
]

[tool.coverage.run]
branch = true
source = ["megalos_server"]
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = false
